@@ -6,6 +6,8 @@ BETA ======= 1.9.1 (HOTFIX)
 - fixed: worker messaging
 - fixed: problem with schema parser (by Andrea Sessa)
 - fixed: F.load() --> "versions" is configurable
+- fixed: "raw" receiving of data
+- fixed: U.request(), the problem with default method
 
 ======= 1.9.0
 
